--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,5 @@ REDIS_HOST=redis
 REDIS_PORT=6379
 
 GEOAPIFY_TOKEN=a57cd5d8a41d465d8a0dd31a842bef5f
+
+DB_DSN="postgresql+psycopg://user:password@URL:5432/data"
