--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,17 +1,17 @@
 version: "3.9"
 
 services:
-  bot:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    env_file:
-      - .env
-    restart: always
-    command: python3 -m bot
-    depends_on:
-      redis:
-        condition: service_healthy
+#  bot:
+#    build:
+#      context: .
+#      dockerfile: Dockerfile
+#    env_file:
+#      - .env
+#    restart: always
+#    command: python3 -m bot
+#    depends_on:
+#      redis:
+#        condition: service_healthy
   nats:
     image: nats:2.10.17
     entrypoint: /nats-server
