--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ environs = "^11.0.0"
 fluentogram = "^1.1.7"
 nats-py = "^2.8.0"
 ormsgpack = "^1.5.0"
-sqlalchemy = "^2.0.31"
+sqlalchemy = {extras = ["asyncio"], version = "^2.0.31"}
 alembic = "^1.13.2"
 psycopg = {extras = ["binary"], version = "^3.2.1"}
 
